ana form, sipariş form

--- a/KafeBerlin.Ui/AnaForm.resx
+++ b/KafeBerlin.Ui/AnaForm.resx
@@ -120,4 +120,90 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="imlBuyuk.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>132, 17</value>
+  </metadata>
+  <data name="imlBuyuk.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADC
+        EQAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABQAEAAUABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        BAABAQIAAUADAAEBAQABCAYAAUAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8A/wD/AP8A
+        CwAB/wTzAfQuAAH0BPMB/wYAAf8ECAHyLgAB8gQIAfWFAAH/AfIF8QHzLAAB8wbxAf8EAAH/AU8FAgEI
+        LAABCAUCAU8B/4QAAfQG8QHyLAAB8gbxAfQEAAHzBgIBTywAAU8GAgHyhAAB9AfxLAAB8gbxAfQEAAHx
+        BgIBTywAAU8GAgHwhAAB9AfxLAAB8gbxAfQEAAHwBgIBTywAAU8GAgHwhAAB9AfxLAAB8gbxAfQEAAHw
+        BgIBTywAAU8GAgHwhAAB9AfxLAAB8gbxAfQEAAHwBgIBTywAAU8GAgHwhAAB9AbxAfIsAAfxAfQEAAHw
+        BgIBTywAAU8GAgEIhAAB9AfxLAAH8QH0BAAB8AYCAU8sAAFPBgIBCIQAAfQH8SwAB/EB9AQAAfAGAgFP
+        LAABTwYCAQiEAAH0B/EsAAfxAfQEAAEIBgIBTywAAU8GAgEIhAAB9AfxLAAH8QH0BAABCAYCAU8sAAFP
+        BgIBCIQAAfQH8QMAAf8C9AH/HgAB/wL0Af8DAAfxAfQEAAEIBgIBTwMAAf8B8wH0Af8eAAH/AfQB8wH/
+        AwABTwYCAQiEAAH0B/ECAAH/AfIC8QHzHgAB8wLxAfIB/wIAB/EB9AQAAQgGAgFPAgAB/wFPAgIBmB4A
+        AZgCAgFPAf8CAAFPBgIBCIQAAfQH8QIAAfME8QH/HAAB/wTxAfMCAAfxAfQEAAEIBgIBTwIAAQgEAgH0
+        HAAB9AQCAQgCAAFPBgIBCIQAAfQH8QIAAfME8QH0HAAB9ATxAfMCAAfxAfQEAAEIBgIBTwIAAZgEAgHz
+        HAAB9AQCAZgCAAFPBgIBCIQAAfQH8QIAAfME8QH0HAAB9ATxAfMCAAfxAfQEAAEIBgIBTwIAAZgEAgHz
+        HAAB8wQCAZgCAAFPBgIBCIQAAfQH8QIAAfIE8QH0HAAB9ATxAfMCAAfxAfQEAAEIBgIBTwIAAZgEAgHz
+        HAAB8wQCAZgCAAFPBgIBCIQAAfQH8QIAAfIE8QH0HAAB9ATxAfMCAAfxAfQEAAEIBgIBTwIAAZgEAgHy
+        HAAB8wQCAZgCAAFPBgIBCIQAAfQH8QIAAfME8QH0HAAB9ATxAfMCAAfxAfQEAAEIBgIBTwIAAZgEAgHy
+        HAAB8gQCAZgCAAFPBgIBCIQAAfQH8QIAAfIE8QH0HAAB9ATxAfMCAAfxAfQEAAEIBwICAAGYBAIB8hwA
+        AfIEAgGYAgABTwYCAQiEAAH0B/ECAAHyBPEB9BwAAfQE8QHzAgAH8QH0BAABCAcCAgABmAQCAfIcAAHy
+        BAIBmAIAAU8GAgEIhAAB9AfxAgAB8gTxAfQcAAH0BPEB8wIAB/EB9AQAAQgHAgIAAZgEAgHyHAAB8gQC
+        AZgCAAFPBgIBCIQAAfQH8QIAAfIE8QH0HAAB9ATxAfMCAAfxAfQEAAEIBwICAAGYBAIB8hwAAfIEAgGY
+        AgABTwYCAQiEAAH0B/ECAAHyBPEB9BwAAfQE8QHzAgAH8QH0BAABCAcCAgABmAQCAfIcAAHyBAIBmAIA
+        AU8GAgEIhAAB9AfxAgAB8gTxAfQcAAH0BPEB8wIAB/EB9AQAAQgHAgIAAZgEAgHyHAAB8gQCAZgCAAFP
+        BgIBCIQAAfQH8QIAAfIE8QH0HAAB9ATxAfMCAAfxAfQEAAEIBwICAAGYBAIB8hwAAfIEAgGYAgABTwYC
+        AQiEAAH0B/ECAAX0Af8cAAH/BfQCAAfxAfQEAAEIBwICAAH0BPAB9RwAAfUD8AHxAfQCAAFPBgIBCIQA
+        AfQH8SwAB/EB9AQAAQgHAiwAAU8GAgEIgwAB/wHzB/Es9AfxAfMB/wIAAf8BCAcCLPMHAgEIAf+BAAH/
+        AfI88QHyAf8B9AFPPAIBTwH0gAAB8j7xAfIBlz4CAZeAAAHyPvEB8gFPPgIBT4AAAfI+8QHyAU8+AgFP
+        gAAB8j7xAfIBTz4CAU+AAAHyPvEB8gFPPgIBT4AAAfI+8QHyAU8+AgFPgAAB8j7xAfIBcj4CAXKAAAH0
+        PvEB9AHyPgIB8oEAAfQ88QH0AgAB8TwCAfCDAAH0OvEB9AQAAfI6AgHyhQAB9DjxAfQGAAHzAU82AgFP
+        AfOHAAH0AfI18QH0CAAB9AFPNAIBTwH0iQAB/wHyMvEB8gH/CgAB9AFPMgIBTwH0iwAB/wHyMPEB8gH/
+        DAAB9QFPMAIBTwH/jQAB/wHyLvEB8gH/DgAB/wFyLgIBcgH/jwAB/wHyLPEB8gH/EAAB/wGXLAIBlwH/
+        kQAB/wHzKvEB8wH/EgAB/wGYKgIBmAH/lAAB8yjxAfMWAAEIKAIBCJcAAf8m9AH/GAAB9AHyAfEb8ATx
+        A/IC8wH0/wD/AP8A/wD/AP8A/wCTAAFCAU0BPgcAAT4DAAEoBAABAQIAAUADAAEBAQABAQYAAQgWAAP/
+        AQAQ/xAAEP8QABD/EAAQ/xAAEP8QABD/EAAQ/xAAAeABfwT/Af4BBwHgAX8E/wH+AQcQAAHAAT8E/wH8
+        AQMBwAE/BP8B/AEDEAABwAE/BP8B/AEDAcABPwT/AfwBAxAAAcABPwT/AfwBAwHAAT8E/wH8AQMQAAHA
+        AT8E/wH8AQMBwAE/BP8B/AEDEAABwAE/BP8B/AEDAcABPwT/AfwBAxAAAcABPwT/AfwBAwHAAT8E/wH8
+        AQMQAAHAAT8E/wH8AQMBwAE/BP8B/AEDEAABwAE/BP8B/AEDAcABPwT/AfwBAxAAAcABPwT/AfwBAwHA
+        AT8E/wH8AQMQAAHAAT8E/wH8AQMBwAE/BP8B/AEDEAABwAE/BP8B/AEDAcABPwT/AfwBAxAAAcABOAF/
+        Av8B/gEcAQMBwAE4AX8C/wH+ARwBAxAAAcABMAF/Av8B/gEMAQMBwAEwAX8C/wH+AQwBAxAAAcABMAE/
+        Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/
+        Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/
+        Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/
+        Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/
+        Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/
+        Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/
+        Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABMAE/Av8B/AEMAQMBwAEwAT8C/wH8AQwBAxAAAcABPwT/
+        AfwBAwHAAT8E/wH8AQMQAAGABgABAQGABgABAf8AMQABgAYAAQEBgAYAAQEQAAHABgABAwHABgABAxAA
+        AeAGAAEHAeAGAAEHEAAB8AYAAQ8B8AYAAQ8QAAH4BgABHwH4BgABHxAAAfwGAAE/AfwGAAE/EAAB/gYA
+        AX8B/gYAAX8QAAH/BgAC/wYAAf8QAAH/AYAEAAEBAv8BgAQAAQEB/xAAAf8B4AQAAQcC/wHgBAABBwH/
+        EAAB/wHwBAABDwL/AfAEAAEPAf8QABD/EAAQ/xAAEP8QABD/EAAQ/xAAEP8QABD/EAAL
+</value>
+  </data>
 </root>
